2nd commit upload (continued development)
1. Added portfolio headers and descriptions.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,400" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Joshua Thomas</title>
 </head>
 <body>
     <!--Navigation bar-->
@@ -21,13 +21,14 @@
 
     <!--header title-->
     <h1>Projects</h1>
+    <p><strong><b><center>API Integrations <br>Commercial websites <br>Landing Pages <br>Mini Projects <br>Personal Portfolio</center></strong></b></p>
 
     <!--Main area-->
     <main class="wrapper">
         <section>
             <img src="fetchAPIs.JPG"/>
             <h1>FetchAPIs.com</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et odit consectetur mollitia earum excepturi consequatur optio atque quidem dolorum, nobis, perspiciatis quia quaerat ducimus accusamus expedita quibusdam minus aperiam cum.</p>
+            <p><center><u>API Integration</u><br>Full stack website which was has a API tracker for Covid data, weather data and movie data. Website uses HTML, SASS, JavaScript, PHP, MYSQL & Responsive Design.</center><br><center>1. API integrations (Covid data, weather data, movie data)<br>2. User & admin register/login<br>3. User & admin can CREATE READ UPDATE DELETE their account<br>4. User & admin can logout of their account<br>5. User can add their profile image<br>6. Admin can search for users</center></p>
                 <div>
                     <a href="https://github.com/JoshuasProgramming/Fetch-APIs.com-Responsive" target="_blank">View Source Code</a>
                     <a href="https://joshuasprogramming.github.io/Fetch-APIs.com-Responsive/"target="_blank">View Live Website</a>
@@ -37,7 +38,7 @@
         <section>
             <img src="Orange Diner.JPG"/>
             <h1>Orange Diner</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et odit consectetur mollitia earum excepturi consequatur optio atque quidem dolorum, nobis, perspiciatis quia quaerat ducimus accusamus expedita quibusdam minus aperiam cum.</p>
+            <p><center><u>Commercial website</u><br>Full stack website which was designed for a bar called "Orange Diner". Website uses HTML, SASS, JavaScript, PHP, MYSQL & Responsive Design.</center><br><center>1. User register/login<br>2. User can CREATE READ UPDATE DELETE their account<br>3. User can logout of their account<br>4. Multiple Pages<br>5. Google Maps Integration<br>6. Password checkbox using JavaScript</center></p>
             <div>
                 <a href="https://github.com/JoshuasProgramming/Orange-Diner-Responsive" target="_blank">View Source Code</a>
                 <a href="https://joshuasprogramming.github.io/Orange-Diner-Responsive/"target="_blank">View Live Website</a>
@@ -47,7 +48,7 @@
         <section>
             <img src="burger palace.JPG"/>
             <h1>Burger Palace</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et odit consectetur mollitia earum excepturi consequatur optio atque quidem dolorum, nobis, perspiciatis quia quaerat ducimus accusamus expedita quibusdam minus aperiam cum.</p>
+            <p><center><u>Commercial website</u><br>Full stack website which was designed for a fast food chain company called "Burger Palace". Website uses HTML, SASS, JavaScript, PHP & Responsive Design.</center><br><center>1. User register/login<br>2. User can CREATE READ UPDATE DELETE their account<br>3. User can logout of their account<br>4. Multiple Pages<br>5. Google Maps Integration</center></p>
             <div>
                 <a href="https://github.com/JoshuasProgramming/Burger-Palace-Responsive" target="_blank">View Source Code</a>
                 <a href="https://joshuasprogramming.github.io/Burger-Palace-Responsive/"target="_blank">View Live Website</a>
@@ -57,7 +58,7 @@
         <section>
             <img src="The 5 Star.JPG"/>
             <h1>The 5 Star</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et odit consectetur mollitia earum excepturi consequatur optio atque quidem dolorum, nobis, perspiciatis quia quaerat ducimus accusamus expedita quibusdam minus aperiam cum.</p>
+            <p><center><u>Commercial website</u><br>Front End website which was designed for a restaurant company called "The 5 Star". Website uses HTML, SASS, JavaScript & Responsive Design.</center><br><center>1. Responsive Design<br>2. Contact Section<br>3. HTML Sections<br>4. One Page Website<br>5. Google Maps Integration</center></p>
             <div>
                 <a href="https://github.com/JoshuasProgramming/The-5-Star-Responsive" target="_blank">View Source Code</a>
                 <a href="https://joshuasprogramming.github.io/The-5-Star-Responsive/"target="_blank">View Live Website</a>
@@ -67,7 +68,7 @@
         <section>
             <img src="Blue Sci-fi.JPG"/>
             <h1>Blue Sci-fi</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et odit consectetur mollitia earum excepturi consequatur optio atque quidem dolorum, nobis, perspiciatis quia quaerat ducimus accusamus expedita quibusdam minus aperiam cum.</p>
+            <p><center><u>Landing Page</u><br>Front End landing page website which was designed for a company called "Blue Sci-Fi". Website uses HTML, SASS, JavaScript & Responsive Design.</center></p>
             <div>
                 <a href="https://github.com/JoshuasProgramming/Blue-Sci-Fi-Responsive" target="_blank">View Source Code</a>
                 <a href="https://joshuasprogramming.github.io/Blue-Sci-Fi-Responsive/"target="_blank">View Live Website</a>
@@ -77,7 +78,7 @@
         <section>
             <img src="compound interest calculator.JPG"/>
             <h1>Compound Interest Calculator</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et odit consectetur mollitia earum excepturi consequatur optio atque quidem dolorum, nobis, perspiciatis quia quaerat ducimus accusamus expedita quibusdam minus aperiam cum.</p>
+            <p><center><u>Mini Project</u><br>Front End website for compound interest. Website uses HTML, SASS, JavaScript & Responsive Design</center></p>
             <div>
                 <a href="https://github.com/JoshuasProgramming/Compound-Interest-Calculator-Responsive" target="_blank">View Source Code</a>
                 <a href="https://joshuasprogramming.github.io/Compound-Interest-Calculator-Responsive/"target="_blank">View Live Website</a>
@@ -87,7 +88,7 @@
         <section>
             <img src="Weight Converter.JPG"/>
             <h1>Weight Converter</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et odit consectetur mollitia earum excepturi consequatur optio atque quidem dolorum, nobis, perspiciatis quia quaerat ducimus accusamus expedita quibusdam minus aperiam cum.</p>
+            <p><center><u>Mini Project</u><br>Front End website for a weight converter. Website uses HTML, SASS, JavaScript & Responsive Design</center></p>
             <div>
                 <a href="https://github.com/JoshuasProgramming/Weight-Converter-Responsive" target="_blank">View Source Code</a>
                 <a href="https://joshuasprogramming.github.io/Weight-Converter-Responsive/"target="_blank">View Live Website</a>
@@ -97,10 +98,20 @@
         <section>
             <img src="number guessing game.JPG"/>
             <h1>Number Guessing Game</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et odit consectetur mollitia earum excepturi consequatur optio atque quidem dolorum, nobis, perspiciatis quia quaerat ducimus accusamus expedita quibusdam minus aperiam cum.</p>
+            <p><center><u>Mini Project</u><br>Front End website for a number guessing game. Website uses HTML, SASS, JavaScript & Responsive Design</center></p>
             <div>
                 <a href="https://github.com/JoshuasProgramming/Number-Guessing-Game-Responsive" target="_blank">View Source Code</a>
                 <a href="https://joshuasprogramming.github.io/Number-Guessing-Game-Responsive/"target="_blank">View Live Website</a>
+            </div>
+        </section>
+
+        <section>
+            <img src="portfolio.JPG"/>
+            <h1>Personal portfolio</h1>
+            <p><center><u>Portfolio</u><br>Front End website which contains my portfolio. Website uses HTML, CSS & Responsive Design</center></p>
+            <div>
+                <a href="https://github.com/JoshuasProgramming/Joshua-Thomas-Dev-Portfolio" target="_blank">View Source Code</a>
+                <a href="https://joshuasprogramming.github.io/Joshua-Thomas-Dev-Portfolio/"target="_blank">View Live Website</a>
             </div>
         </section>
     </main>
