3rd commit upload (changed the anchor link)

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <!--Navigation bar-->
     <nav class="wrapper">
-        <a href="/">Joshua Thomas</a>
+        <a href="#">Joshua Thomas</a>
         <div>
             
         </div>
