Put links into footer

--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
         </div>
         <div class="right">
             <ul>
-                <li><a href="#">Github</a></li>
-                <li><a href="#">LinkedIN</a></li>
+                <li><a href="https://github.com/JoshuasProgramming">Github</a></li>
+                <li><a href="https://www.linkedin.com/in/joshua-thomas-dev/">LinkedIN</a></li>
             </ul>
         </div>
     </footer>
