added target blank to footer links

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <!--header title-->
     <h1>Projects</h1>
-    <p><strong><b><center>API Integrations <br>Commercial websites <br>Landing Pages <br>Mini Projects <br>Personal Portfolio</center></strong></b></p>
+    <p><i><center>API Integrations <br>Commercial websites <br>Landing Pages <br>Mini Projects <br>Personal Portfolio</center></i></p>
 
     <!--Main area-->
     <main class="wrapper">
@@ -123,8 +123,8 @@
         </div>
         <div class="right">
             <ul>
-                <li><a href="https://github.com/JoshuasProgramming">Github</a></li>
-                <li><a href="https://www.linkedin.com/in/joshua-thomas-dev/">LinkedIN</a></li>
+                <li><a href="https://github.com/JoshuasProgramming" target="_blank">Github</a></li>
+                <li><a href="https://www.linkedin.com/in/joshua-thomas-dev/" target="_blank">LinkedIN</a></li>
             </ul>
         </div>
     </footer>
