added video link for fetchAPIs.com

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             <p><center><u>API Integration</u><br>Full stack website which was has a API tracker for Covid data, weather data and movie data. Website uses HTML, SASS, JavaScript, PHP, MYSQL & Responsive Design.</center><br><center>1. API integrations (Covid data, weather data, movie data)<br>2. User & admin register/login<br>3. User & admin can CREATE READ UPDATE DELETE their account<br>4. User & admin can logout of their account<br>5. User can add their profile image<br>6. Admin can search for users</center></p>
                 <div>
                     <a href="https://github.com/JoshuasProgramming/Fetch-APIs.com-Responsive" target="_blank">View Source Code</a>
+                    <a href="https://youtu.be/F5vqx36KA3s" target="_blank">Watch Video</a>
                     <a href="https://joshuasprogramming.github.io/Fetch-APIs.com-Responsive/"target="_blank">View Live Website</a>
                 </div>
         </section>
