--- a/index.html
+++ b/index.html
@@ -21,10 +21,21 @@
 
     <!--header title-->
     <h1>Projects</h1>
-    <p><i><center>API Integrations <br>Commercial websites <br>Landing Pages <br>Mini Projects <br>Personal Portfolio</center></i></p>
+    <p><i><center>Ecommerce websites<br>Clone Websites<br>API Integrations <br>Commercial websites <br>Landing Pages <br>Mini Projects <br>Personal Portfolio</center></i></p>
 
     <!--Main area-->
     <main class="wrapper">
+
+        <section>
+            <img src="HoneyPot Funiture.JPG"/>
+            <h1>HoneyPot Furniture</h1>
+            <p><center><u>Ecommerce Clone website</u><br>This was a coding test, which had me create a fully reponsive ecommerce website from a UX/UI design. This website which uses HTML, SASS, JavaScript & Responsive Design.</p>
+                <div>
+                    <a href="https://github.com/JoshuasProgramming/HoneyPot-Furniture" target="_blank">View Source Code</a>
+                    <a href="https://joshuasprogramming.github.io/HoneyPot-Furniture/"target="_blank">View Live Website</a>
+                </div>
+        </section>
+
         <section>
             <img src="fetchAPIs.JPG"/>
             <h1>FetchAPIs.com</h1>
@@ -37,22 +48,22 @@
         </section>
 
         <section>
-            <img src="Orange Diner.JPG"/>
-            <h1>Orange Diner</h1>
-            <p><center><u>Commercial website</u><br>Full stack website which was designed for a bar called "Orange Diner". Website uses HTML, SASS, JavaScript, PHP, MYSQL & Responsive Design.</center><br><center>1. User register/login<br>2. User can CREATE READ UPDATE DELETE their account<br>3. User can logout of their account<br>4. Multiple Pages<br>5. Google Maps Integration<br>6. Password checkbox using JavaScript</center></p>
-            <div>
-                <a href="https://github.com/JoshuasProgramming/Orange-Diner-Responsive" target="_blank">View Source Code</a>
-                <a href="https://joshuasprogramming.github.io/Orange-Diner-Responsive/"target="_blank">View Live Website</a>
-            </div>
-        </section>
-
-        <section>
             <img src="burger palace.JPG"/>
             <h1>Burger Palace</h1>
             <p><center><u>Commercial website</u><br>Full stack website which was designed for a fast food chain company called "Burger Palace". Website uses HTML, SASS, JavaScript, PHP & Responsive Design.</center><br><center>1. User register/login<br>2. User can CREATE READ UPDATE DELETE their account<br>3. User can logout of their account<br>4. Multiple Pages<br>5. Google Maps Integration</center></p>
             <div>
                 <a href="https://github.com/JoshuasProgramming/Burger-Palace-Responsive" target="_blank">View Source Code</a>
                 <a href="https://joshuasprogramming.github.io/Burger-Palace-Responsive/"target="_blank">View Live Website</a>
+            </div>
+        </section>
+
+        <section>
+            <img src="Orange Diner.JPG"/>
+            <h1>Orange Diner</h1>
+            <p><center><u>Commercial website</u><br>Full stack website which was designed for a bar called "Orange Diner". Website uses HTML, SASS, JavaScript, PHP, MYSQL & Responsive Design.</center><br><center>1. User register/login<br>2. User can CREATE READ UPDATE DELETE their account<br>3. User can logout of their account<br>4. Multiple Pages<br>5. Google Maps Integration<br>6. Password checkbox using JavaScript</center></p>
+            <div>
+                <a href="https://github.com/JoshuasProgramming/Orange-Diner-Responsive" target="_blank">View Source Code</a>
+                <a href="https://joshuasprogramming.github.io/Orange-Diner-Responsive/"target="_blank">View Live Website</a>
             </div>
         </section>
 
