added new 'HoneyPot Furniture' image to portfolio

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
     <main class="wrapper">
 
         <section>
-            <img src="HoneyPot Funiture.JPG"/>
+            <img src="HoneyPot Furniture (final).png"/>
             <h1>HoneyPot Furniture</h1>
-            <p><center><u>Ecommerce Clone website</u><br>This was a coding test, which had me create a fully reponsive ecommerce website from a UX/UI design. This website which uses HTML, SASS, JavaScript & Responsive Design.</p>
+            <p><center><u>Ecommerce Clone website</u><br>This was a coding test, which had me create a fully responsive ecommerce website from a UX/UI design. This website which uses HTML, SASS, JavaScript & Responsive Design.</p>
                 <div>
                     <a href="https://github.com/JoshuasProgramming/HoneyPot-Furniture" target="_blank">View Source Code</a>
                     <a href="https://joshuasprogramming.github.io/HoneyPot-Furniture/"target="_blank">View Live Website</a>
