--- a/index.html
+++ b/index.html
@@ -27,6 +27,16 @@
     <main class="wrapper">
 
         <section>
+            <img src="1920x1080.png"/>
+            <h1>Interior-Design-Landing-Page</h1>
+            <p><center><u>Ecommerce Clone website</u><br>I created a fully responsive ecommerce website from viewing a UX/UI design online. This website uses HTML, SASS & Responsive Design.</p>
+                <div>
+                    <a href="https://github.com/JoshuasProgramming/Interior-Design-Landing-Page" target="_blank">View Source Code</a>
+                    <a href="https://joshuasprogramming.github.io/Interior-Design-Landing-Page/"target="_blank">View Live Website</a>
+                </div>
+        </section>
+
+        <section>
             <img src="HoneyPot Furniture (final).png"/>
             <h1>HoneyPot Furniture</h1>
             <p><center><u>Ecommerce Clone website</u><br>This was a coding test, which had me create a fully responsive ecommerce website from a UX/UI design. This website which uses HTML, SASS, JavaScript & Responsive Design.</p>
