Added the 'FoodDX' project to portfolio

--- a/index.html
+++ b/index.html
@@ -27,6 +27,16 @@
     <main class="wrapper">
 
         <section>
+            <img src="FoodDX.JPG"/>
+            <h1>Food Delivery Website</h1>
+            <p><center><u>Food Delivery Website</u><br>I created a fully responsive real estate website from viewing a UX/UI design online. This website uses HTML, SASS & Responsive Design</p>
+                <div>
+                    <a href="https://github.com/JoshuasProgramming/FoodDX" target="_blank">View Source Code</a>
+                    <a href="https://joshuasprogramming.github.io/FoodDX/"target="_blank">View Live Website</a>
+                </div>
+        </section>
+
+        <section>
             <img src="The Modern House.JPG"/>
             <h1>The Modern House Landing-Page</h1>
             <p><center><u>Real Estate Clone website</u><br>I created a fully responsive ecommerce website from viewing a UX/UI design online. This website uses HTML, SASS & Responsive Design.</p>
