Changed the description of the 'FoodDX' project

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <section>
             <img src="FoodDX.JPG"/>
             <h1>Food Delivery Website</h1>
-            <p><center><u>Food Delivery Website</u><br>I created a fully responsive real estate website from viewing a UX/UI design online. This website uses HTML, SASS & Responsive Design</p>
+            <p><center><u>Food Delivery Website</u><br>I created a fully responsive food delivery website from viewing a UX/UI design online. This website uses HTML, SASS & Responsive Design.</p>
                 <div>
                     <a href="https://github.com/JoshuasProgramming/FoodDX" target="_blank">View Source Code</a>
                     <a href="https://joshuasprogramming.github.io/FoodDX/"target="_blank">View Live Website</a>
