Fixed description for 'The Modern House' website

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <section>
             <img src="The Modern House.JPG"/>
             <h1>The Modern House Landing-Page</h1>
-            <p><center><u>Real Estate Clone website</u><br>I created a fully responsive ecommerce website from viewing a UX/UI design online. This website uses HTML, SASS & Responsive Design.</p>
+            <p><center><u>Real Estate Clone website</u><br>I created a fully responsive real estate website from viewing a UX/UI design online. This website uses HTML, SASS & Responsive Design.</p>
                 <div>
                     <a href="https://github.com/JoshuasProgramming/The-Modern-House" target="_blank">View Source Code</a>
                     <a href="https://joshuasprogramming.github.io/The-Modern-House/"target="_blank">View Live Website</a>
