Added 'think-tank' project to portfolio

--- a/index.html
+++ b/index.html
@@ -27,9 +27,19 @@
     <main class="wrapper">
 
         <section>
+            <img src="1920x1080_Open.png"/>
+            <h1>Blog website</h1>
+            <p><center><u>Blog Website</u><br>This was a coding test, which had me create a fully responsive blog website from a UX/UI design. This website which uses HTML, SASS, JavaScript & Responsive Design.</p>
+                <div>
+                    <a href="https://github.com/JoshuasProgramming/Think-Tank" target="_blank">View Source Code</a>
+                    <a href="https://joshuasprogramming.github.io/Think-Tank/"target="_blank">View Live Website</a>
+                </div>
+        </section>
+
+        <section>
             <img src="FoodDX.JPG"/>
             <h1>Food Delivery Website</h1>
-            <p><center><u>Food Delivery Website</u><br>I created a fully responsive food delivery website from viewing a UX/UI design online. This website uses HTML, SASS & Responsive Design.</p>
+            <p><center><u>Food Delivery Website</u><br>I created a fully responsive real estate website from viewing a UX/UI design online. This website uses HTML, SASS & Responsive Design</p>
                 <div>
                     <a href="https://github.com/JoshuasProgramming/FoodDX" target="_blank">View Source Code</a>
                     <a href="https://joshuasprogramming.github.io/FoodDX/"target="_blank">View Live Website</a>
@@ -39,7 +49,7 @@
         <section>
             <img src="The Modern House.JPG"/>
             <h1>The Modern House Landing-Page</h1>
-            <p><center><u>Real Estate Clone website</u><br>I created a fully responsive real estate website from viewing a UX/UI design online. This website uses HTML, SASS & Responsive Design.</p>
+            <p><center><u>Real Estate Clone website</u><br>I created a fully responsive ecommerce website from viewing a UX/UI design online. This website uses HTML, SASS & Responsive Design.</p>
                 <div>
                     <a href="https://github.com/JoshuasProgramming/The-Modern-House" target="_blank">View Source Code</a>
                     <a href="https://joshuasprogramming.github.io/The-Modern-House/"target="_blank">View Live Website</a>
