Added link for 'Koccon' live website

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             </p>
                 <div>
                     <a href="https://github.com/JoshuasProgramming/Kocoon" target="_blank">View Source Code</a>
+                    <a href="https://joshuasprogramming.github.io/Kocoon/"target="_blank">View Live Website</a>
                 </div>
         </section>
 
