Began adding Kocoon version 2.0

--- a/index.html
+++ b/index.html
@@ -25,6 +25,18 @@
 
     <!--Main area-->
     <main class="wrapper">
+        
+        <section>
+            <img src=""/>
+            <h1>Kocoon version 2.0</h1>
+            <p><center><u>Blog / Article Website</u><br>
+                We provide the latest information on wellbeing topics by working with charities, services and academics.
+            </p>
+                <div>
+                    <a href="https://github.com/JoshuasProgramming/Kocoon-ver.2" target="_blank">View Source Code</a>
+                    <a href="https://joshuasprogramming.github.io/Kocoon-ver.2/"target="_blank">View Live Website</a>
+                </div>
+        </section>
 
         <section>
             <img src="Kocoon.png"/>
