--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <main class="wrapper">
         
         <section>
-            <img src=""/>
+            <img src="127.0.0.1_5500_index.html (13).png"/>
             <h1>Kocoon version 2.0</h1>
             <p><center><u>Blog / Article Website</u><br>
                 We provide the latest information on wellbeing topics by working with charities, services and academics.
