--- a/index.html
+++ b/index.html
@@ -21,10 +21,34 @@
 
     <!--header title-->
     <h1>Projects</h1>
-    <p><i><center>Ecommerce websites<br>Clone Websites<br>API Integrations <br>Commercial websites <br>Landing Pages <br>Mini Projects <br>Personal Portfolio</center></i></p>
+    <p><i><center>Ecommerce websites<br>Freelance projects<br>Clone Websites<br>API Integrations <br>Commercial websites <br>Landing Pages <br>Mini Projects <br>Personal Portfolio</center></i></p>
 
     <!--Main area-->
     <main class="wrapper">
+
+        <section>
+            <img src="tappedesigns.png"/>
+            <h1>Kocoon version 2.0</h1>
+            <p><center><u>design portfolio freelance project</u><br>
+                I created a fully responsive portfolio website for one of my friends. This website uses HTML, SASS, CSS, JavaScript & Responsive Design
+            </p>
+                <div>
+                    <a href="https://github.com/JoshuasProgramming/tappedesigns_portfolio" target="_blank">View Source Code</a>
+                    <a href="https://joshuasprogramming.github.io/tappedesigns_portfolio"target="_blank">View Live Website</a>
+                </div>
+        </section>
+
+        <section>
+            <img src="moneybox.png"/>
+            <h1>Kocoon version 2.0</h1>
+            <p><center><u>Banking website</u><br>
+                I created a fully responsive banking website. This website uses HTML, SASS, CSS, JavaScript(Jquery) & Responsive Design.
+            </p>
+                <div>
+                    <a href="https://github.com/JoshuasProgramming/MoneyBox" target="_blank">View Source Code</a>
+                    <a href="https://joshuasprogramming.github.io/MoneyBox"target="_blank">View Live Website</a>
+                </div>
+        </section>
         
         <section>
             <img src="koccon 2.0.png"/>
