--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
         <section>
             <img src="tappedesigns.png"/>
-            <h1>Kocoon version 2.0</h1>
+            <h1>tappedesigns portfolio</h1>
             <p><center><u>design portfolio freelance project</u><br>
                 I created a fully responsive portfolio website for one of my friends. This website uses HTML, SASS, CSS, JavaScript & Responsive Design
             </p>
@@ -40,7 +40,7 @@
 
         <section>
             <img src="moneybox.png"/>
-            <h1>Kocoon version 2.0</h1>
+            <h1>MoneyBox</h1>
             <p><center><u>Banking website</u><br>
                 I created a fully responsive banking website. This website uses HTML, SASS, CSS, JavaScript(Jquery) & Responsive Design.
             </p>
