Added apple clone (in production) to portfolio

--- a/index.html
+++ b/index.html
@@ -27,6 +27,18 @@
     <main class="wrapper">
 
         <section>
+            <img src="apple Clone.png"/>
+            <h1>Apple Clone (React.js)</h1>
+            <p><center><u>Recreated the Apple website</u><br>
+                I created the fully responsive apple website from scratch . This website uses React.js, SASS & Responsive Design
+            </p>
+                <div>
+                    <a href="https://github.com/JoshuasProgramming/apple-clone" target="_blank">View Source Code</a>
+                    <a>In Production</a>
+                </div>
+        </section>
+
+        <section>
             <img src="tappedesigns.png"/>
             <h1>tappedesigns portfolio</h1>
             <p><center><u>design portfolio freelance project</u><br>
